DI 串接 service layer, data access layer, 資料庫連接字串

--- a/Source/ForInterviewWork/web/appsettings.json
+++ b/Source/ForInterviewWork/web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress2012;Initial Catalog=ForInterviewWork2021;User ID=fiwDev;password=P@ssw0rd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
