部門管理-取得管理用資料清單; UI 套用設計; 各按鈕待實作; 加入 font-awesome;

--- a/Source/ForInterviewWork/Common.DataAccess.EFCore/Common.DataAccess.EFCore.csproj
+++ b/Source/ForInterviewWork/Common.DataAccess.EFCore/Common.DataAccess.EFCore.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Common.Services\Common.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ExtensionMethods\" />
+  </ItemGroup>
+
 </Project>
